[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
time = "0.3.36"
pnet = "0.35.0"
tokio = { version = "1.40.0", features = ["full"] }
tokio-postgres = "0.7.12"
dotenvy = "0.15.7"

[[bin]]
name = "client"
path = "src/testSocket.rs"

[[bin]]
name = "server"
path = "src/main.rs"
