[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
time = "0.3.36"
tokio = { version = "1.41.1", features = ["full"] }
tokio-postgres = "0.7.12"
dotenvy = "0.15.7"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
chrono = "0.4"

[[bin]]
name = "server"
path = "src/main.rs"
